JumpScript/tests/baselines/reference/directDependenceBetweenTypeAliases.errors.txt
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(4,6): error TS2456: Type alias 'T0' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(5,6): error TS2456: Type alias 'T0_1' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(6,6): error TS2456: Type alias 'T0_2' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(7,6): error TS2456: Type alias 'T0_3' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(11,6): error TS2456: Type alias 'T1' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(14,6): error TS2456: Type alias 'T2' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(16,6): error TS2456: Type alias 'T2_1' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(19,6): error TS2456: Type alias 'T3' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(22,6): error TS2456: Type alias 'T4' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(25,5): error TS2502: 'x' is referenced directly or indirectly in its own type annotation.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(26,6): error TS2456: Type alias 'T5' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(29,6): error TS2456: Type alias 'T6' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(30,6): error TS2456: Type alias 'T7' circularly references itself.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(31,5): error TS2502: 'yy' is referenced directly or indirectly in its own type annotation.
tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump(32,6): error TS2456: Type alias 'T8' circularly references itself.


==== tests/cases/conformance/types/typeAliases/directDependenceBetweenTypeAliases.jump (15 errors) ====
    // It is an error for the type specified in a type alias to depend on that type alias
    
    // A type alias directly depends on the type it aliases.
    type T0 = T0
         ~~
!!! error TS2456: Type alias 'T0' circularly references itself.
    type T0_1 = T0_2
         ~~~~
!!! error TS2456: Type alias 'T0_1' circularly references itself.
    type T0_2 = T0_3
         ~~~~
!!! error TS2456: Type alias 'T0_2' circularly references itself.
    type T0_3 = T0_1
         ~~~~
!!! error TS2456: Type alias 'T0_3' circularly references itself.
    
    // A type reference directly depends on the referenced type and each of the type arguments, if any.
    interface I<T> {}
    type T1 = I<T1>
         ~~
!!! error TS2456: Type alias 'T1' circularly references itself.
    
    // A union type directly depends on each of the constituent types.
    type T2 = T2 | string
         ~~
!!! error TS2456: Type alias 'T2' circularly references itself.
    class C<T> {}
    type T2_1 = T2_1[] | number
         ~~~~
!!! error TS2456: Type alias 'T2_1' circularly references itself.
    
    // An array type directly depends on its element type.
    type T3 = T3[]
         ~~
!!! error TS2456: Type alias 'T3' circularly references itself.
    
    // A tuple type directly depends on each of its element types.
    type T4 = [number, T4]
         ~~
!!! error TS2456: Type alias 'T4' circularly references itself.
    
    // A type query directly depends on the type of the referenced entity.
    var x: T5[] = []
        ~
!!! error TS2502: 'x' is referenced directly or indirectly in its own type annotation.
    type T5 = typeof x
         ~~
!!! error TS2456: Type alias 'T5' circularly references itself.
    
    class C1<T> {}
    type T6 = T7 | number
         ~~
!!! error TS2456: Type alias 'T6' circularly references itself.
    type T7 = typeof yy
         ~~
!!! error TS2456: Type alias 'T7' circularly references itself.
    var yy: [string, T8[]];
        ~~
!!! error TS2502: 'yy' is referenced directly or indirectly in its own type annotation.
    type T8 = C<T6>
         ~~
!!! error TS2456: Type alias 'T8' circularly references itself.
    
    // legal cases
    type T9 = () => T9
    type T10 = { x: T10 } | { new(v: T10): string }
    type T11 = T12[]
    type T12 = [T13, string]
    type T13 = typeof zz
    var zz: { x: T11 }
    
    